--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,5 +33,10 @@
     ],
     "import/prefer-default-export": "off",
     "no-useless-constructor": "off"
+  },
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
+    }
   }
 }
