chore: disable eslint no-explicity-any rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,8 @@
       }
     ],
     "import/prefer-default-export": "off",
-    "no-useless-constructor": "off"
+    "no-useless-constructor": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "settings": {
     "import/resolver": {
