chore: disable eslint no-restricted-syntax rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,8 @@
     ],
     "import/prefer-default-export": "off",
     "no-useless-constructor": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "no-restricted-syntax": "off"
   },
   "settings": {
     "import/resolver": {
